--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>CSS grouping elements</title>
+    <title>Gelmai</title>
     <meta charset="utf-8">
 </head>
 <body>
